syntax = "proto3";
import "gogo.proto";

package pos;

option go_package = "./pkg/pb";

message Pos {
  int64 id = 1 [(gogoproto.jsontag) = "id"];
  string name = 2 [(gogoproto.jsontag) = "name"];
  int32 type = 3  [(gogoproto.jsontag) = "type"];
  int32 total = 4;
  string color = 5 [(gogoproto.jsontag) = "color"];
  int64 created_at = 6 [(gogoproto.jsontag) = "created_at"];
  int64 updated_at = 7 [(gogoproto.jsontag) = "updated_at"];
}

// CreatePos
message CreatePosRequest {
  int64 user_id = 1;
  string name = 2;
  int32 type = 3;
  string color = 4;
}

message CreatePosResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

message PosDetailRequest { int64 id = 1; }

message PosDetailResponse {
  int64 status = 1;
  string error = 2;
  Pos pos = 3;
}

message GetPosListRequest {
  int64 limit = 1;
  int64 page = 2;
  int64 user_id = 3;
}

message GetPosListResponse {
  int64 status = 1[(gogoproto.jsontag) = "status"];
  string error = 2 [(gogoproto.jsontag) = "error"];
  int64 limit = 3 [(gogoproto.jsontag) = "limit"];
  int64 page = 4 [(gogoproto.jsontag) = "page"];
  repeated Pos pos = 5 [(gogoproto.jsontag) = "pos"];
}

message UpdatePosRequest {
  int64 id = 1;
  string name = 2;
  string color = 3;
}

message UpdatePosResponse {
  int64 status = 1;
  string error = 2;
  Pos pos = 3;
}

message DeletePosRequest {
  int64 id = 1;
}

message DeletePosResponse {
  int64 status = 1;
  string error = 2;
}

message UpdateTotalPosRequest {
  enum ActionTransaction {
    INCREASE = 0;
    DECREASE = 1;
  };

  int64 id = 1;
  ActionTransaction action = 2;
  int64 amount = 3;
}

message UpdateTotalPosResponse {
  int64 status = 1;
  string error = 2;
  int64 total = 3;
}

service PosService {
  rpc CreatePos(CreatePosRequest) returns (CreatePosResponse) {}
  rpc GetPosByUser(GetPosListRequest) returns (GetPosListResponse) {}
  rpc PosDetail(PosDetailRequest) returns (PosDetailResponse) {}
  rpc UpdatePosByUser(UpdatePosRequest) returns (UpdatePosResponse) {}
  rpc DeletePosByUser(DeletePosRequest) returns (DeletePosResponse) {}
  rpc UpdateTotalPosByUser(UpdateTotalPosRequest) returns (UpdateTotalPosResponse) {}
}